--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div style="margin-top:16px; display:flex; gap:12px; flex-wrap:wrap;">
               <a class="btn-yellow" href="login.html">Reserva tu Clase Gratis</a>
               <a class="btn-white-outline" id="btnCursos" href="#cursos">Ver Servicios</a>
-              <a class="btn" href="espanel.html">Libreta</a>
+              <a class="btn-white-outline" href="espanel.html">Libreta</a>
             </div>
 
           </div>
@@ -135,7 +135,7 @@
     </section>
 
     <!-- METHOD SECTION -->
-    <section class="section-wide method-section">
+    <section id="metodo-disenado-para-ti" class="section-wide method-section">
       <div class="section-wide-inner">
         <h2 class="method-title">M&eacute;todo Dise&ntilde;ado para Ti</h2>
 
@@ -205,22 +205,6 @@
             <button class="sp-btn sp-btn-red" type="button">Saber M&aacute;s</button>
           </article>
 
-          <article class="services-plus-card sp-red">
-            <div class="sp-icon">📝</div>
-            <h3>Traducciones</h3>
-            <p>Traducciones espa&ntilde;ol-polaco de documentos, contratos, certificados.</p>
-            <div class="sp-pill">Desde 50 PLN/p&aacute;g</div>
-            <button class="sp-btn sp-btn-yellow" type="button">Saber M&aacute;s</button>
-          </article>
-
-          <article class="services-plus-card sp-white">
-            <div class="sp-icon">👥</div>
-            <h3>Clases Grupales</h3>
-            <p>Grupos peque&ntilde;os de m&aacute;ximo 5 personas. Aprende con otros latinos.</p>
-            <div class="sp-pill">80 PLN/persona</div>
-            <button class="sp-btn sp-btn-red" type="button">Saber M&aacute;s</button>
-          </article>
-
           <article class="services-plus-card sp-blue">
             <div class="sp-icon">💼</div>
             <h3>Polaco Empresarial</h3>
@@ -234,44 +218,7 @@
       </div>
     </section>
 
-    <!-- EBOOKS -->
-    <section class="section-wide ebooks-section">
-      <div class="section-wide-inner">
-        <div class="ebooks-head">
-          <h2>Mis E-books</h2>
-          <p>
-            Material exclusivo creado para hispanohablantes. Aprende a tu ritmo con
-            gu&iacute;as pr&aacute;cticas y ejercicios.
-          </p>
-        </div>
-
-        <div class="ebooks-grid">
-          <article class="ebook-card ebook-yellow">
-            <div class="ebook-icon">📘</div>
-            <h3>Polaco B&aacute;sico<br>para Latinos</h3>
-            <p>100 p&aacute;ginas con vocabulario esencial, ejercicios y audios.</p>
-            <div class="ebook-price">49 PLN</div>
-            <button class="ebook-btn ebook-btn-red" type="button">Ver Contenido</button>
-          </article>
-
-          <article class="ebook-card ebook-white">
-            <div class="ebook-icon ebook-icon-red">💬</div>
-            <h3>Frases<br>del D&iacute;a a D&iacute;a</h3>
-            <p>500 Frases Esenciales. Las frases m&aacute;s &uacute;tiles para tu vida diaria.</p>
-            <div class="ebook-price ebook-price-pill">39 PLN</div>
-            <button class="ebook-btn ebook-btn-red" type="button">Ver Contenido</button>
-          </article>
-
-          <article class="ebook-card ebook-red">
-            <div class="ebook-icon ebook-icon-white">📄</div>
-            <h3>Gu&iacute;a de<br>Tr&aacute;mites</h3>
-            <p>Gu&iacute;a de Tr&aacute;mites en Polonia. Todo sobre documentos y oficinas.</p>
-            <div class="ebook-price ebook-price-pill">59 PLN</div>
-            <button class="ebook-btn ebook-btn-yellow" type="button">Ver Contenido</button>
-          </article>
-        </div>
-      </div>
-    </section>
+    
 
     <section id="contact" class="contactSection">
       <div class="container">
@@ -378,4 +325,5 @@
 </main>
 </body>
 </html>
+
 
