--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
 
     </div><!-- /container -->
 
-    <section class="section-wide">
+    <section class="section-wide stats-band">
       <div class="section-wide-inner">
-        <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:10px;">
-          <div class="card statCard" style="padding:14px; text-align:center;">
+        <div class="stat-grid">
+          <div class="card statCard">
             <div style="font-weight:900; font-size:34px; color:var(--yellow);">100+</div>
             <div class="muted">Estudiantes</div>
           </div>
-          <div class="card statCard" style="padding:14px; text-align:center;">
+          <div class="card statCard">
             <div style="font-weight:900; font-size:34px; color:var(--pastel-blue);">10</div>
             <div class="muted">años</div>
           </div>
-          <div class="card statCard" style="padding:14px; text-align:center;">
+          <div class="card statCard">
             <div style="font-weight:900; font-size:34px; color:var(--red);">4.9★</div>
             <div class="muted">valoración</div>
           </div>
@@ -182,11 +182,14 @@
             </ul>
           </article>
         </div>
+        <div class="method-cta">
+          <a class="btn-yellow" href="services.html#planes">Ver Planes</a>
+        </div>
       </div>
     </section>
 
     <!-- SERVICES PLUS -->
-    <section class="section-wide services-plus">
+    <section id="mas-que-clases" class="section-wide services-plus">
       <div class="section-wide-inner">
         <div class="services-plus-head">
           <h2>M&aacute;s que Clases de Idioma</h2>
