--- a/ejercicio.html
+++ b/ejercicio.html
@@ -177,6 +177,7 @@
       </div>
     </div>
 
+    <script type="module" src="assets/js/content-protect.js"></script>
     <script type="module" src="assets/js/pages/ejercicio-page.js"></script>
   </body>
 </html>
