--- a/espanel.html
+++ b/espanel.html
@@ -55,6 +55,17 @@
                 ></span>
               </div>
             </div>
+            <div class="card" id="trialCard">
+              <div class="sectionTitle" style="margin-top: 0">
+                🎁 Prueba gratis A1
+              </div>
+              <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
+                <button class="btn-yellow" id="btnTrialA1" type="button">
+                  Activa A1 gratis 7 días
+                </button>
+              </div>
+              <div class="hintSmall" id="trialMsg" style="margin-top: 8px; display: none"></div>
+            </div>
             <div class="card" id="lastActivityCard">
               <div class="sectionTitle" style="margin-top: 0">
                 🕒 Última actividad
