--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
             </p>
 
             <div style="margin-top:16px; display:flex; gap:12px; flex-wrap:wrap;">
-              <a class="btn-yellow" href="login.html">Reserva tu Clase Gratis</a>
+              <button class="btn-yellow" id="btnTrialA1" type="button">
+                Activa A1 gratis 7 d&iacute;as
+              </button>
               <a class="btn-white-outline" id="btnCursos" href="#cursos">Ver Servicios</a>
               <a class="btn-white-outline" href="espanel.html">Libreta</a>
             </div>
+            <div class="hintSmall" id="trialMsg" style="margin-top:8px; display:none;"></div>
 
           </div>
 
