--- a/lesson.html
+++ b/lesson.html
@@ -26,6 +26,7 @@
       </div>
     </main>
 
+    <script type="module" src="assets/js/content-protect.js"></script>
     <!-- no page script on purpose -->
   </body>
 </html>
