--- a/services.html
+++ b/services.html
@@ -31,6 +31,16 @@
           </div>
         </div>
 
+        <div class="card" style="margin-bottom: 18px">
+          <div class="sectionTitle" style="margin-top: 0">🎁 Prueba gratis A1</div>
+          <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
+            <button class="btn-yellow" id="btnTrialA1" type="button">
+              Activa A1 gratis 7 días
+            </button>
+          </div>
+          <div class="hintSmall" id="trialMsg" style="margin-top: 8px; display: none"></div>
+        </div>
+
         <section id="planes" class="services-section">
           <h2 class="sectionTitle" style="margin-top: 0">📌 Planes</h2>
           <div id="servicesPlansGrid" class="services-grid"></div>
