--- a/course.html
+++ b/course.html
@@ -91,6 +91,7 @@
       </div>
     </div>
 
+    <script type="module" src="assets/js/content-protect.js"></script>
     <script type="module" src="assets/js/pages/course-page.js"></script>
   </body>
 </html>
