--- a/lessonpage.html
+++ b/lessonpage.html
@@ -79,6 +79,7 @@
       </div>
     </main>
 
+    <script type="module" src="assets/js/content-protect.js"></script>
     <script type="module" src="assets/js/pages/lessonpage-page.js"></script>
   </body>
 </html>
