--- a/admin-select.html
+++ b/admin-select.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
+﻿<!DOCTYPE html>
+<html lang="pl">
 <head>
   <meta charset="utf-8" />
-  <title>Seleccionar contenido | Admin | AquiVivo</title>
+  <title>Wybor tresci | Admin | AquiVivo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="assets/css/styles.css" />
   <script src="assets/js/layout.js" type="module"></script>
@@ -15,16 +15,16 @@
 
       <section class="heroBanner">
         <div class="heroTitleRow">
-          <div class="heroIcon">🧭</div>
+          <div class="heroIcon">&#x1F9ED;</div>
           <div>
-            <h1 class="sectionTitle">Seleccionar nivel y tema</h1>
-            <p class="subtitle">Antes de entrar al admin, elige el nivel y el tema que vas a editar.</p>
+            <h1 class="sectionTitle">Wybierz poziom i temat</h1>
+            <p class="subtitle">Zanim wejdziesz do admina, wybierz poziom i temat do edycji.</p>
           </div>
         </div>
       </section>
 
       <section class="card">
-        <h2 class="sectionTitle">1) Nivel</h2>
+        <h2 class="sectionTitle">1) Poziom</h2>
         <div class="metaRow" style="flex-wrap:wrap; gap:10px;">
           <select id="selLevel" class="select" style="min-width:160px;">
             <option value="A1">A1</option>
@@ -33,32 +33,32 @@
             <option value="B2">B2</option>
           </select>
 
-          <button id="btnLoadTopics" class="btn-white-outline">Cargar temas</button>
+          <button id="btnLoadTopics" class="btn-white-outline">Wczytaj tematy</button>
           <span id="levelHint" class="hintSmall"></span>
         </div>
       </section>
 
       <section class="card">
-        <h2 class="sectionTitle">2) Tema</h2>
+        <h2 class="sectionTitle">2) Temat</h2>
 
         <div class="metaRow" style="flex-wrap:wrap; gap:10px;">
           <select id="selTopic" class="select" style="min-width:520px; max-width:100%;" disabled>
-            <option value="">— Primero carga los temas —</option>
+            <option value="">-- Najpierw wczytaj tematy --</option>
           </select>
 
-          <button id="btnRefresh" class="btn-white-outline" disabled>Actualizar</button>
+          <button id="btnRefresh" class="btn-white-outline" disabled>Odswiez</button>
         </div>
 
         <div id="topicPreview" class="card" style="margin-top:14px; display:none;">
-          <div class="subtitle" style="margin-bottom:6px;">Seleccionado</div>
+          <div class="subtitle" style="margin-bottom:6px;">Wybrano</div>
           <div id="topicTitle" class="sectionTitle" style="font-size:22px;"></div>
           <div id="topicSubtitle" class="subtitle" style="margin-top:6px;"></div>
           <div class="metaRow" style="flex-wrap:wrap; gap:10px; margin-top:14px;">
-            <a id="goLessonAdmin" class="btn-yellow" href="#">✏️ Admin lección</a>
-            <a id="goExerciseAdmin" class="btn-white-outline" href="#">🧪 Admin ejercicios</a>
+            <a id="goLessonAdmin" class="btn-yellow" href="#">Admin lekcji</a>
+            <a id="goExerciseAdmin" class="btn-white-outline" href="#">Admin cwiczen</a>
           </div>
           <p class="hintSmall" style="margin-top:10px;">
-            Tip: también puedes abrir “Ver lección” dentro de lessonadmin.
+            Wskazowka: mozesz tez otworzyc &quot;Podglad lekcji&quot; w panelu lekcji.
           </p>
         </div>
 
